--- a/style.css
+++ b/style.css
@@ -220,23 +220,34 @@ nav a {
   background: #fff;
   display: flex;
   flex-direction: column;
-  padding: 80px 0;
+  /* padding: 80px 0; */
+  padding: 40px 0 0 0;
+  padding-top: 80px;
   width: 830px;
 }
 
 hr {
   border: 1px solid #f5f5f5;
-  margin: 80px 0;
   width: 100%;
 }
 
 .post {
-  margin: 0 auto;
+  margin: 80px auto;
   width: 600px;
 }
 
-.blog-post-title {
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  margin: 80px auto;
+  position: relative;
+  top: 160px;
+  width: var(--width-blog-content);
+}
+
+.blog-post-title a {
   color: var(--black);
+  font-family: var(--font-family-domaine-bold);
   line-height: 1.25;
   margin-top: 15px;
   margin-bottom: 7px;
@@ -294,15 +305,6 @@ hr {
 
 .tag:not(:last-child) {
   margin-right: 5px;
-}
-
-.pagination {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 auto;
-  position: relative;
-  top: 160px;
-  width: var(--width-blog-content);
 }
 
 /* SIDEBAR */
