--- a/style.css
+++ b/style.css
@@ -220,28 +220,31 @@ nav a {
   background: #fff;
   display: flex;
   flex-direction: column;
-  /* padding: 80px 0; */
-  padding: 40px 0 0 0;
-  padding-top: 80px;
+  padding: 80px 0 0 0;
   width: 830px;
 }
 
 hr {
   border: 1px solid #f5f5f5;
+  margin: 80px 0;
   width: 100%;
 }
 
+hr:last-child {
+  margin-bottom: 0px;
+}
+
 .post {
-  margin: 80px auto;
+  margin: 0px auto 0 auto;
   width: 600px;
 }
 
 .pagination {
   display: flex;
   justify-content: space-between;
-  margin: 80px auto;
+  margin: 0px auto;
   position: relative;
-  top: 160px;
+  top: -50px;
   width: var(--width-blog-content);
 }
 
@@ -581,11 +584,16 @@ td {
     width: 80vw;
   }
 
-  .post,
   .page {
     padding: 0 1em;
     margin: 0 auto;
     width: auto;
+  }
+
+  .post {
+    margin: 0 auto;
+    padding: 0;
+    width: 80vw;
   }
 
   table {
@@ -635,7 +643,7 @@ td {
 
   .blog-list,
   .page-container {
-    padding: 25px 0;
+    padding: 25px 0 0 0;
   }
 
   .pagination {
