--- a/style.css
+++ b/style.css
@@ -220,16 +220,21 @@ nav a {
   background: #fff;
   display: flex;
   height: fit-content;
-
   flex-direction: column;
-  padding: 80px 0 0 0;
+  /* padding: 80px 0 0 0; */
   width: 830px;
+}
+
+hr:first-child {
+  display: none;
 }
 
 hr {
   border: 1px solid #f5f5f5;
-  margin: 80px 0;
+  margin: 80px auto 0 0;
+  /* margin-left: -115px; */
   width: 100%;
+  width: 830px;
 }
 
 hr:last-child {
@@ -237,7 +242,7 @@ hr:last-child {
 }
 
 .post {
-  margin: 0px auto 0 auto;
+  margin: 80px auto 0 auto;
   width: 600px;
 }
 
@@ -247,6 +252,7 @@ hr:last-child {
   margin: 0px auto;
   position: relative;
   top: -50px;
+  top: 80px;
   width: var(--width-blog-content);
 }
 
