--- a/style.css
+++ b/style.css
@@ -175,7 +175,6 @@ nav a {
 }
 
 .nav-links {
-  /* test display rule */
   display: flex;
   float: right;
   margin-top: 10px;
@@ -221,7 +220,7 @@ nav a {
   display: flex;
   height: fit-content;
   flex-direction: column;
-  /* padding: 80px 0 0 0; */
+  /* margin-bottom: 2em; */
   width: 830px;
 }
 
@@ -232,8 +231,6 @@ hr:first-child {
 hr {
   border: 1px solid #f5f5f5;
   margin: 80px auto 0 0;
-  /* margin-left: -115px; */
-  width: 100%;
   width: 830px;
 }
 
@@ -251,19 +248,9 @@ hr:last-child {
   justify-content: space-between;
   margin: 0px auto;
   position: relative;
-  top: -50px;
   top: 80px;
   width: var(--width-blog-content);
 }
-
-/* .nav-links {
-  display: flex;
-  justify-content: space-between;
-  margin: 0px auto;
-  position: relative;
-  top: -50px;
-  width: var(--width-blog-content);
-} */
 
 span.page-numbers.current {
   color: var(--yellow);
@@ -552,11 +539,19 @@ td {
 /* BREAKPOINT FOR XL SCREENS */
 
 @media only screen and (max-width: 1200px) {
-  .nav-links a {
+  /* .nav-links a {
     display: none;
   }
 
   #nav a {
+    float: none;
+  } */
+
+  .nav-links .selectedLink {
+    display: none;
+  }
+
+  #nav .selectedLink {
     float: none;
   }
 
@@ -573,7 +568,6 @@ td {
     padding: 1.195em;
   }
 
-  /* test */
   .responsive {
     flex-direction: column;
   }
@@ -587,6 +581,19 @@ td {
   }
 
   #nav.responsive a:hover {
+    background: #fff;
+    color: var(--black);
+  }
+
+  #nav.responsive .selectedLink {
+    float: none;
+    display: block;
+    text-align: left;
+    padding: 0;
+    width: 100vw;
+  }
+
+  #nav.responsive .selectedLink:hover {
     background: #fff;
     color: var(--black);
   }
@@ -619,7 +626,6 @@ td {
   }
 
   .post {
-    margin: 0 auto;
     padding: 0;
     width: 80vw;
   }
@@ -628,8 +634,13 @@ td {
     width: 80vw;
   }
 
+  .screen-reader-text {
+    display: none;
+  }
+
   .pagination {
-    top: 165px;
+    margin: 0;
+    top: 90px;
     width: 80vw;
   }
 
@@ -674,8 +685,12 @@ td {
     padding: 25px 0 0 0;
   }
 
-  .pagination {
-    top: 100px;
+  .post {
+    margin: 0 auto;
+  }
+
+  hr {
+    margin: 80px auto 80px 0;
   }
 
   .date {
