--- a/style.css
+++ b/style.css
@@ -248,7 +248,7 @@ hr:last-child {
 }
 
 .post {
-  margin: 80px auto 0 auto;
+  margin: 60px auto 0 auto;
   width: 600px;
 }
 
@@ -293,46 +293,23 @@ span.page-numbers.current {
 /* TAGS */
 
 .tag {
+  background: var(--blueTertiary);
   border-radius: 5px;
   color: #fff;
   display: inline-block;
   font-family: var(--font-family-open-sans);
-  font-size: var(--font-size-body-desktop);
+  font-size: var(--font-size-body-responsive);
   margin-bottom: 10px;
   padding: 5px 10px;
+}
+
+.tag a {
+  color: var(--grey);
 }
 
 .fa-tag {
   font-size: 14px;
   margin-right: 5px;
-}
-
-.tag-orange {
-  background: var(--orange);
-}
-
-.tag-blue {
-  background: var(--blueSecondary);
-}
-
-.tag-aqua {
-  background: var(--aqua);
-}
-
-.tag-blue-primary {
-  background: var(--black);
-}
-
-.tag-yellow {
-  background: var(--yellow);
-}
-
-.tag-hotpink {
-  background: var(--hotpink);
-}
-
-.tag-blue-tertiary {
-  background: var(--blueTertiary);
 }
 
 .tag:not(:last-child) {
