--- a/style.css
+++ b/style.css
@@ -495,6 +495,10 @@ footer {
   width: 600px;
 }
 
+.featured-image {
+  margin-bottom: 1em;
+}
+
 .page h1 {
   margin-top: 0;
 }
@@ -615,7 +619,10 @@ td {
     width: auto;
   }
 
-  .featured-image,
+  .featured-image {
+    width: 75vw;
+  }
+
   .blog-post-title,
   .excerpt,
   .page-title,
