--- a/style.css
+++ b/style.css
@@ -131,10 +131,15 @@ h3 {
   font-size: 24px;
 }
 
+ol,
 p {
   font-family: var(--font-family-open-sans);
   font-size: var(--font-size-body-desktop);
   line-height: 1.75;
+}
+
+.main-content li {
+  margin-bottom: 1em;
 }
 
 .read-more-link {
@@ -230,7 +235,8 @@ blockquote.wp-block-quote {
   display: flex;
   height: fit-content;
   flex-direction: column;
-  width: 830px;
+  /* width: 830px; */
+  width: 800px;
 }
 
 hr:first-child {
@@ -240,7 +246,9 @@ hr:first-child {
 hr {
   border: 1px solid #f5f5f5;
   margin: 80px auto 0 0;
-  width: 830px;
+  margin: 40px auto 0 0;
+  /* width: 830px; */
+  width: 800px;
 }
 
 hr:last-child {
@@ -249,6 +257,7 @@ hr:last-child {
 
 .post {
   margin: 60px auto 0 auto;
+  margin: 60px auto;
   width: 600px;
 }
 
@@ -273,7 +282,7 @@ span.page-numbers.current {
 }
 
 .blog-post-title {
-  margin: 15px 0;
+  margin: 10px 0;
 }
 
 .blog-post-title a {
@@ -517,7 +526,8 @@ footer {
   flex: 0 0 auto;
   padding: 80px 0;
   padding: 60px 0;
-  width: 830px;
+  /* width: 830px; */
+  width: 800px;
 }
 
 .wp-block-table {
