--- a/style.css
+++ b/style.css
@@ -354,10 +354,6 @@ span.page-numbers.current {
   color: var(--black);
 }
 
-form .screen-reader-text {
-  display: none;
-}
-
 input#s {
   border: 1px solid #eee;
   border-radius: 5px;
@@ -580,6 +576,17 @@ td {
   background: var(--grey);
   margin: 1px;
   padding: 15px;
+}
+
+/* 404 ERROR PAGE  */
+
+#error-search-box #searchsubmit {
+  background: var(--grey);
+  border: none;
+  font-family: var(--font-family-open-sans);
+  font-size: var(--font-size-body-desktop);
+  margin-top: 1em;
+  padding: 0.5em 1em;
 }
 
 /* BREAKPOINT FOR XL SCREENS */
