--- a/style.css
+++ b/style.css
@@ -28,18 +28,8 @@ Author URI: https://connorocampo.dev
 
   /* FONT STYLES */
 
-  --font-family-open-sans: "Open Sans", sans-serif, -apple-system,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji",
-    sans-serif;
-  --font-family-open-sans-bold: "Open Sans Bold", "Noto Sans Bold", sans-serif,
-    -apple-system, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-    "Noto Color Emoji", sans-serif;
-  --font-family-domine: "Domine", Arial, sans-serif, -apple-system,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji",
-    sans-serif;
-  --font-family-domine-bold: "Domine Bold", Arial, sans-serif, -apple-system,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji",
-    sans-serif;
+  --font-default: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
   /* Font Sizes */
   --font-size-body-desktop: 18px;
@@ -58,56 +48,14 @@ Author URI: https://connorocampo.dev
   box-sizing: border-box;
 }
 
-@font-face {
-  font-family: "Domine";
-  src: local("Domine"),
-    url(assets/fonts/domine-v7-latin-regular.woff) format("woff");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Domine Bold";
-  src: local("Domine Bold"),
-    url(assets/fonts/domine-v7-latin-700.woff) format("woff");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Open Sans";
-  src: local("Open Sans"),
-    url(assets/fonts/open-sans-v17-latin-regular.woff) format("woff");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Open Sans Italic";
-  src: local("Open Sans Italic"),
-    url(assets/fonts/open-sans-v17-latin-italic.woff) format("woff");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Open Sans Bold";
-  src: local("Open Sans Bold"),
-    url(assets/fonts/open-sans-v17-latin-700.woff) format("woff");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Open Sans Black";
-  src: local("Open Sans Black"),
-    url(assets/fonts/open-sans-v17-latin-800.woff) format("woff");
-  font-display: swap;
-}
-
 body {
   background: var(--grey);
+  font-family: var(--font-default);
   margin: 0;
   padding: 0;
 }
 
 a {
-  font-family: var(--font-family-open-sans);
   text-decoration: none;
 }
 
@@ -117,7 +65,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--font-family-domine);
+  font-weight: 800;
   line-height: 1.5;
 }
 
@@ -136,9 +84,17 @@ h3 {
 ul,
 ol,
 p {
-  font-family: var(--font-family-open-sans);
   font-size: var(--font-size-body-desktop);
   line-height: 1.75;
+}
+
+.main-content ul,
+.main-content ol {
+  margin-bottom: 1.75em;
+}
+
+.wp-block-image {
+  margin: 2em 0;
 }
 
 .main-content li {
@@ -147,8 +103,8 @@ p {
 
 .read-more-link {
   color: var(--black);
-  font-family: var(--font-family-open-sans-bold);
   font-size: var(--font-size-body-desktop);
+  font-weight: bold;
   margin-top: 20px;
 }
 
@@ -185,13 +141,12 @@ nav img {
   margin-top: 5px;
 }
 
-nav a {
+header nav a {
   color: var(--grey);
   display: block;
   float: left;
-  font-family: var(--font-family-open-sans-bold);
   font-size: 18px;
-  padding: 20px 1em;
+  font-weight: 700;
   padding: 0.5em 1em;
   margin: 0 1px;
   text-decoration: none;
@@ -238,8 +193,8 @@ nav a {
 
 blockquote.wp-block-quote {
   border-left: 5px solid #ffc046;
-  padding-left: 2em;
-  margin-left: 0;
+  padding: 0.5em 2em 2em 2em;
+  margin: 2.5em 0;
 }
 
 /* BLOG LIST PAGE */
@@ -249,7 +204,6 @@ blockquote.wp-block-quote {
   display: flex;
   height: fit-content;
   flex-direction: column;
-  /* width: 830px; */
   width: 800px;
 }
 
@@ -259,10 +213,7 @@ hr:first-child {
 
 hr {
   border: 1px solid #f5f5f5;
-  margin: 80px auto 0 0;
   margin: 40px auto 0 0;
-  /* width: 830px; */
-  width: 800px;
   width: 100%;
 }
 
@@ -271,7 +222,6 @@ hr:last-child {
 }
 
 .post {
-  margin: 60px auto 0 auto;
   margin: 60px auto;
   width: 600px;
 }
@@ -287,7 +237,6 @@ hr:last-child {
 
 span.page-numbers.current {
   color: var(--yellow);
-  font-family: var(--font-family-open-sans-bold);
   font-size: 18px;
   padding: 20px 1em;
 }
@@ -295,7 +244,6 @@ span.page-numbers.current {
 .page-numbers {
   display: block;
   float: left;
-  font-family: var(--font-family-open-sans-bold);
   font-size: 18px;
   padding: 20px 1em;
   margin: 0 1px;
@@ -312,14 +260,12 @@ span.page-numbers.current {
 
 .blog-post-title a {
   color: var(--black);
-  font-family: var(--font-family-domaine-bold);
   line-height: 1.25;
   margin-bottom: 7px;
 }
 
 .date {
   color: var(--black);
-  font-family: var(--font-family-open-sans);
   font-size: var(--font-size-body-desktop);
   margin-right: 10px;
 }
@@ -331,10 +277,9 @@ span.page-numbers.current {
   border-radius: 5px;
   color: #fff;
   display: inline-block;
-  font-family: var(--font-family-open-sans);
   font-size: var(--font-size-body-responsive);
   margin-bottom: 10px;
-  padding: 5px 10px;
+  padding: 6px 10px;
 }
 
 .tag a {
@@ -480,8 +425,6 @@ footer {
 .widget {
   display: flex;
   flex-direction: column;
-  /* font-family: var(--font-family-domine-bold);
-  font-size: 28px; */
 }
 
 .widget h2 {
@@ -500,7 +443,6 @@ footer {
 .widget a {
   color: var(--grey);
   display: inline-block;
-  font-family: var(--font-family-open-sans-bold);
   font-size: 18px;
   margin-bottom: 10px;
 }
@@ -583,7 +525,6 @@ footer {
 }
 
 table {
-  font-family: var(--font-family-open-sans);
   font-size: 16px;
   margin: 20px auto;
   text-align: center;
@@ -592,7 +533,6 @@ table {
 th {
   background: var(--black);
   color: var(--grey);
-  font-family: var(--font-family-open-sans-bold);
   font-size: var(--font-size-body-desktop);
   padding: 15px 25px;
 }
@@ -608,7 +548,6 @@ td {
 #error-search-box #searchsubmit {
   background: var(--grey);
   border: none;
-  font-family: var(--font-family-open-sans);
   font-size: var(--font-size-body-desktop);
   margin-top: 1em;
   padding: 0.5em 1em;
