--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ p {
 
 .main-content ul,
 .main-content ol {
-  margin-bottom: 1.75em;
+  margin: 1.75em 0;
 }
 
 .wp-block-image {
@@ -252,6 +252,7 @@ span.page-numbers.current {
 
 .pagination a {
   color: var(--black);
+  font-weight: bold;
 }
 
 .blog-post-title {
@@ -444,6 +445,7 @@ footer {
   color: var(--grey);
   display: inline-block;
   font-size: 18px;
+  font-weight: bold;
   margin-bottom: 10px;
 }
 
