--- a/style.css
+++ b/style.css
@@ -88,6 +88,44 @@ p {
   line-height: 1.75;
 }
 
+a {
+  overflow-wrap: break-word;
+}
+
+.wp-block-table {
+  margin: 0;
+}
+
+.wp-block-table figcaption {
+  font-style: italic;
+  margin-top: -10px;
+  text-align: center;
+}
+
+table {
+  font-size: 16px;
+  margin: 20px auto;
+  text-align: center;
+}
+
+th,
+tfoot {
+  background: var(--black);
+  color: var(--grey);
+  font-size: var(--font-size-body-desktop);
+  padding: 15px 25px;
+}
+
+td {
+  background: var(--grey);
+  margin: 1px;
+  padding: 15px;
+}
+
+table tfoot td {
+  font-weight: bold;
+}
+
 .main-content ul,
 .main-content ol {
   margin: 1.75em 0;
@@ -538,29 +576,6 @@ footer {
   width: 800px;
 }
 
-.wp-block-table {
-  margin: 0;
-}
-
-table {
-  font-size: 16px;
-  margin: 20px auto;
-  text-align: center;
-}
-
-th {
-  background: var(--black);
-  color: var(--grey);
-  font-size: var(--font-size-body-desktop);
-  padding: 15px 25px;
-}
-
-td {
-  background: var(--grey);
-  margin: 1px;
-  padding: 15px;
-}
-
 /* 404 ERROR PAGE  */
 
 #error-search-box #searchsubmit {
@@ -783,8 +798,23 @@ td {
     margin-bottom: 2em;
   }
 
+  .wp-block-table figcaption {
+    margin-top: 10px;
+  }
+
   table {
     margin-bottom: 0;
+  }
+}
+
+@media (max-width: 800px) {
+  .youtube-embed {
+    width: 100%;
+  }
+
+  .wp-block-table figcaption {
+    padding: 0 0.5em;
+    text-align: left;
   }
 }
 
